# msc_thesis

./: .gitmodules  README.md
helper/: package.xml  setup.cfg  setup.py
object314_description/: CMakeLists.txt  README.md  package.xml
object314_description/config/: control.yaml  localization.yaml
object314_description/launch/: display.launch.py  sim.launch.py  test.launch.py
object314_description/meshes/: gps_link.STL  imu_link.STL  left_drive_wheel_link.STL  left_first_wheel_link.STL  left_fourth_wheel_link.STL  left_front_camera_link.STL  left_front_camera_support_link.STL  left_front_support_roller_link.STL  left_lidar_link.STL  left_lidar_support_link.STL  left_motor_link.STL  left_rear_camera_link.STL  left_rear_camera_support_link.STL  left_rear_support_roller_link.STL  left_second_wheel_link.STL  left_tensioning_roller_link.STL  left_third_wheel_link.STL  left_track_link.STL  onboard_pc_link.STL  right_drive_wheel_link.STL  right_first_wheel_link.STL  right_fourth_wheel_link.STL  right_front_camera_link.STL  right_front_camera_support_link.STL  right_front_support_roller_link.STL  right_lidar_link.STL  right_lidar_support_link.STL  right_motor_link.STL  right_rear_camera_link.STL  right_rear_camera_support_link.STL  right_rear_support_roller_link.STL  right_second_wheel_link.STL  right_tensioning_roller_link.STL  right_third_wheel_link.STL  right_track_link.STL  right_track_rack_link.STL  rplidar_link.STL
object314_description/rviz/: display.rviz  sim.rviz
object314_description/urdf/: object314.xacro  object314_chassis.xacro  object314_gazebo.xacro  object314_materials.xacro  object314_sensors.xacro
object314_description/world/: simple.world  social.world  social_scene_dynamic_one.world  social_scene_dynamic_two.world  social_scene_static.world
rl_planner/: package.xml  setup.py
rl_planner/checkpoints/: network_01990000.data-00000-of-00001  network_01990000.index
rl_planner/config/: params.yaml
rl_planner/launch/: rl_planner.launch.py
rl_planner/rl_planner/: agent.py  config.py  network.py  rl_planner.py
social_msgs/: CMakeLists.txt  package.xml
(+5 files in other folders)
