<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_planner</name>
  <version>1.0.0</version>
  <description>Wrapper for using the motion planning algorithm GA3C-CADRL</description>
  <url>https://github.com/mit-acl/rl_collision_avoidance</url>

  <author email="statskey.sovetnik@gmail.com">Anton Larionov</author>
  <maintainer email="todo@todo.todo">todo</maintainer>

  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>social_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
